--- a/TPwebhamburgueseria/styles.css
+++ b/TPwebhamburgueseria/styles.css
@@ -13,6 +13,8 @@ font-size: 3em;
 }
 .destacado {font-family: 'Michroma', sans-serif;
     color: rgb(200, 52, 3); 
+    width: 67%;
+    display: inline-block;
     text-align: center;
     font-size: large;
     position: relative;
@@ -129,7 +131,7 @@ height: 500px;}
         .columnafoto {
           flex: 40%;
           max-width: 40%;
-          padding: 10px 4px;
+          padding: 20px 4px;
           margin-top: 12px;
           vertical-align: bottom;
         }
@@ -143,3 +145,36 @@ height: 500px;}
         }
       }
       
+      #CajaPokemon {
+        background-color: rgb(62, 13, 3);
+        padding:10px;
+        margin: 20px auto;
+        width: 50%;
+    }
+
+    #nombrePokemon, #imagenPokemon {
+        padding: 10px;
+        background-color:rgb(251, 231, 206);
+        
+    }
+
+    button {
+     color: blanchedalmond;
+     border-radius: 15px;
+     border-color: blanchedalmond;
+font-size: 1.5em;
+font-weight: 600;      
+        background-color:rgb(62, 13, 3);
+        margin: 10px auto;
+        padding: 20px;
+    }
+    #CajaPokemonEstrella {
+      background-color: rgb(171, 5, 5);
+      padding:30px;
+      margin: 10px auto;
+      width: 40%;
+  }
+
+  #nombrePokemon2, #imagenPokemon2 {
+      padding: 10px;
+        }
